redid the new user flow to auto make an account again

--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -94,6 +94,7 @@
 
         &-data {
           flex: auto;
+          word-break: break-word;
         }
 
         &-progress,
@@ -227,5 +228,9 @@
   &__footer {
     text-align: center;
     margin: $margin-default;
+  }
+
+  &__footer {
+    padding-top: $unit-default * 5;
   }
 }
