--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -114,6 +114,20 @@
         flex-grow: 10;
         flex-shrink: 0;
         overflow: hidden;
+
+        $smaller-screen-bar: 2.5;
+
+        @include screen-xs {
+          height: $unit-default * $smaller-screen-bar;
+        }
+
+        @include screen-sm {
+          height: $unit-default * $smaller-screen-bar;
+        }
+
+        @include screen-md {
+          height: $unit-default * $smaller-screen-bar;
+        }
       }
 
       button {
