disabled user input when editing a item instead

--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -276,6 +276,7 @@ input {
   border-color: $color-fore;
   margin: $margin-default * 0.5 $margin-default;
   padding: $padding-default * 0.5 $padding-default;
+  transition: $transition-default;
 
   &::placeholder {
     opacity: 0.5;
