ux fix for editing items to hide status

--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -168,10 +168,8 @@
         }
 
         &.EDIT & {
-          &-content {
-            display: none;
-          }
-
+          &-status,
+          &-content,
           &-bg {
             display: none;
           }
