--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -187,17 +187,17 @@
               $smaller-screen-bar: 2.5;
 
               @include screen-xs {
-                margin: $unit-default * 0.1 0;
+                margin: $unit-default * 0.1;
                 height: $unit-default * $smaller-screen-bar;
               }
 
               @include screen-sm {
-                margin: $unit-default * 0.1 0;
+                margin: $unit-default * 0.1;
                 height: $unit-default * $smaller-screen-bar;
               }
 
               @include screen-md {
-                margin: $unit-default * 0.1 0;
+                margin: $unit-default * 0.1;
                 height: $unit-default * $smaller-screen-bar;
               }
             }
