--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -356,18 +356,20 @@ button {
 }
 
 .status.bar {
+  $offPos: -5px;
+
   position: absolute;
-  left: -3px;
-  right: 102%;
+  left: $offPos;
+  right: 105%;
   height: 0;
-  bottom: -3px;
+  bottom: $offPos;
   z-index: -1;
   background-color: transparent;
   transition: background-color 0.6s, right 0.6s, height 1s;
 
   @each $status, $value in $all-status-colours {
     &.#{to-upper-case($status)} {
-      right: -3px;
+      right: $offPos;
       background-color: $value;
       height: $unit-default * 0.5;
       transition: right 0.6s;
@@ -386,13 +388,12 @@ button {
   }
 
   &.COMPLETE {
-    left: -3px;
-    right: -3px;
+    left: $offPos;
+    right: $offPos;
     height: 0;
-    bottom: -3px;
+    bottom: $offPos;
   }
 }
-
 
 //.fade-enter-active,
 //.fade-leave-active,
