--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -371,14 +371,17 @@ button {
     &.#{to-upper-case($status)} {
       right: $offPos;
       background-color: $value;
-      height: $unit-default * 0.5;
+      height: $unit-default * 0.7;
       transition: right 0.6s;
 
       @include screen-xs {
-        height: $unit-default * 0.75;
+        height: $unit-default;
       }
       @include screen-sm {
-        height: $unit-default * 0.75;
+        height: $unit-default;
+      }
+      @include screen-md {
+        height: $unit-default * 0.85;
       }
     }
   }
