missing sass colour

--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -97,6 +97,7 @@ $all-colours: (
   mid: $color-mid,
   success: $color-success,
   error: $color-error,
+  waiting: $color-waiting,
   fore: $color-fore,
   select: $color-select,
   disabled: $color-status-disabled,
