--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -8,16 +8,22 @@ body {
   padding: $padding-default;
   background-color: $color-bg;
 
+  $small-padding: $padding-default * 0.1;
+
+  @include screen-lg {
+    padding: $padding-default * 0.33;
+  }
+
   @include screen-md {
-    padding: $padding-default * 0.5;
+    padding: $small-padding;
   }
 
   @include screen-sm {
-    padding: 0 $padding-default * 0.5;
+    padding: $small-padding;
   }
 
   @include screen-xs {
-    padding: 0 $padding-default * 0.5;
+    padding: $small-padding;
   }
 }
 
@@ -49,7 +55,7 @@ body {
   }
 }
 
-// screen show / hide / props //
+// screen open / hide / props //
 
 .hide-xs {
   @include screen-xs {
@@ -280,6 +286,19 @@ input {
 
   &::placeholder {
     opacity: 0.5;
+  }
+
+  $smaller-screen-bar: $unit-default * 2.5;
+  @include screen-xs {
+    height: $smaller-screen-bar;
+  }
+
+  @include screen-sm {
+    height: $smaller-screen-bar;
+  }
+
+  @include screen-md {
+    height: $smaller-screen-bar;
   }
 
   @each $status, $value in $all-status-border-colours {
