fixed progress rendering broken

--- a/front/src/styles/_row.scss
+++ b/front/src/styles/_row.scss
@@ -52,6 +52,7 @@
           }
 
           &-progress {
+            word-break: keep-all;
             margin-right: $margin-default;
 
             @include screen-xs {
