fixed confirm status on rowitem

--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -86,6 +86,7 @@ $all-status-border-colours: (
 $all-status-colours: (
   disabled: $color-status-disabled,
   waiting: $color-status-waiting,
+  warning: $color-status-waiting,
   success: $color-status-success,
   error: $color-status-error
 );
@@ -98,11 +99,13 @@ $all-colours: (
   success: $color-success,
   error: $color-error,
   waiting: $color-waiting,
+  warning: $color-waiting,
   fore: $color-fore,
   select: $color-select,
   disabled: $color-status-disabled,
   disabled-status: $color-status-disabled,
   waiting-status: $color-status-waiting,
+  warning-status: $color-status-waiting,
   success-status: $color-status-success,
   error-status: $color-status-error
 );
