--- a/front/src/styles/_row.scss
+++ b/front/src/styles/_row.scss
@@ -140,8 +140,8 @@
       &.COMPLETE & {
         @include show-md-down {
           &__mid-bg::after {
-            border-color: rgba($color-shadow, $color-alpha * 2);
-            background-color: $color-success;
+            border-color: rgba($color-shadow, $color-alpha * 2.25);
+            background-color: $color-status-success;
           }
         }
       }
@@ -239,6 +239,11 @@
       min-height: $unit-default * 0.5;
       margin: $margin-default * 0.25 0;
 
+      .icon {
+        min-width: $icon-size * 0.75;
+        min-height: $icon-size * 0.75;
+      }
+
       &-close {
         text-align: right;
       }
@@ -249,6 +254,18 @@
       &-confirm {
         margin-right: 0;
         margin-left: $margin-default * 4;
+      }
+
+      @include screen-sm {
+        margin: unset;
+        justify-content: space-around;
+
+        &-edit,
+        &-close,
+        &-delete,
+        &-confirm {
+          margin: unset;
+        }
       }
 
       @include screen-xs {
