--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -33,8 +33,8 @@ body {
   font-size: $font-size;
   max-width: $icon-size;
   max-height: $icon-size;
-  min-width: $icon-size * 0.2;
-  min-height: $icon-size * 0.2;
+  min-width: $icon-size * 0.4;
+  min-height: $icon-size * 0.4;
   //vertical-align: middle; // weird seems to hang from middle wtf?!
   color: inherit;
   -webkit-text-fill-color: inherit;
@@ -269,6 +269,17 @@ body {
 
 .m-2 {
   margin: $unit-default * 2;
+}
+
+// for accessability screen reader text
+.sr-only {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 // INPUTS && CONTROLS TO BE SEPARATED //
