--- a/front/src/styles/_row.scss
+++ b/front/src/styles/_row.scss
@@ -17,11 +17,11 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      padding: 0;
       margin: $margin-default * 0.4 0;
 
       &__mid {
         margin: 0;
-        padding: 0;
         flex: auto;
         overflow: hidden;
         position: relative;
@@ -160,8 +160,9 @@
 
       &__option-btn {
         opacity: 1;
+        min-width: unset;
         text-align: right;
-        min-width: $unit-default * 1.5;
+        padding: $border-size;
 
         .OPEN & {
           pointer-events: none;
@@ -173,9 +174,24 @@
         }
 
         button {
+          padding: 0;
+          text-align: center;
+          width: $icon-size * 0.8;
           margin: 0;
-          text-align: right;
-          padding-right: 0;
+          margin-left: $margin-default * 0.25;
+
+          @include screen-xs {
+            margin-left: 0;
+          }
+          @include screen-sm {
+            margin-left: 0;
+          }
+          @include screen-md {
+            margin-left: 0;
+          }
+          @include screen-lg {
+            margin-left: 0;
+          }
         }
       }
     }
@@ -201,19 +217,48 @@
     /* stylelint-enable */
 
     &__status {
-      @include hide-md-down {
-        &-icon {
-          text-align: center;
-          position: relative;
-          z-index: 1;
-          font-size: $font-size-md;
-          width: $unit-default;
-          max-width: $unit-default;
+      $tmp: $unit-default * 1.3;
 
-          .icon {
-            opacity: 1;
-            transition: $transition-default;
-          }
+      height: $tmp;
+      width: $tmp;
+      min-height: $tmp;
+      min-width: $tmp;
+      position: relative;
+      //margin: 0 $margin-default * 0.5;
+
+      &-icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      input,
+      label {
+        min-height: $tmp;
+        min-width: $tmp;
+      }
+
+      .icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 90%;
+        height: 90%;
+        min-height: $icon-size * 0.7;
+        min-width: $icon-size * 0.7;
+        transform: translateX(-50%) translateY(-50%);
+      }
+
+      @include hide-md-down {
+        @include screen-lg {
+          $tmp: $unit-default * 1;
+
+          height: $tmp;
+          width: $tmp;
+          min-height: $tmp;
+          min-width: $tmp;
         }
       }
 
@@ -237,7 +282,7 @@
       align-items: center;
       justify-content: flex-end;
       min-height: $unit-default * 0.5;
-      margin: $margin-default * 0.25 0;
+      margin: $margin-default * 0.25;
 
       .icon {
         min-width: $icon-size * 0.75;
