--- a/front/src/styles/index.scss
+++ b/front/src/styles/index.scss
@@ -1,7 +1,9 @@
 @import "_reset.scss";
 @import "_variables.scss";
 @import "_text.scss";
+@import "_controls.scss";
 @import "_style.scss";
 @import "_defaults.scss";
 @import "_header.scss";
 @import "_row.scss";
+@import "_statusBar.scss";
