--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -1,11 +1,9 @@
 .task__project__header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
+  max-width: 100%;
   &__info {
-    flex-grow: 2;
-    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
     &-name {
       font-size: $font-size-lg;
@@ -17,9 +15,17 @@
 
       @include screen-xs {
         @include small-size;
+        flex: auto;
       }
       @include screen-sm {
         @include small-size;
+        flex: auto;
+      }
+      @include screen-md {
+        flex: auto;
+      }
+      @include screen-lg {
+        flex: auto;
       }
     }
 
