added toast message UI wip for now

--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -15,6 +15,12 @@
 }
 
 .task {
+  &.max-screen-size {
+    overflow: hidden;
+    max-width: 97vw;
+    max-height: 97vh;
+  }
+
   .hint {
     margin: $margin-default * 2 $margin-default;
   }
