progress text tweak

--- a/front/src/styles/_row.scss
+++ b/front/src/styles/_row.scss
@@ -51,6 +51,7 @@
           }
 
           &-progress {
+            align-self: center;
             word-break: keep-all;
             margin-right: $margin-default;
 
