--- a/front/src/styles/_row.scss
+++ b/front/src/styles/_row.scss
@@ -231,7 +231,11 @@
     &__status {
       $tmp: $unit-default * 1.3;
 
-      &.NO-CHECKBOX {
+      &.NO-CHECKBOX & {
+        &-icon {
+          cursor: default;
+        }
+
         input {
           display: none;
         }
@@ -244,6 +248,7 @@
       position: relative;
 
       &-icon {
+        cursor: pointer;
         position: absolute;
         top: 0;
         left: 0;
