--- a/front/src/styles/index.scss
+++ b/front/src/styles/index.scss
@@ -7,4 +7,6 @@
 @import "_header.scss";
 @import "_row.scss";
 @import "_statusBar.scss";
+@import "_card.scss";
+@import "_user.scss";
 @import "_toast.scss";
