--- a/front/src/styles/_toast.scss
+++ b/front/src/styles/_toast.scss
@@ -29,12 +29,17 @@
     text-align: center;
     margin: $margin-default;
     padding: $padding-default;
-    background-color: $color-mid;
+    background-color: $color-success;
     min-height: $unit-default * 5;
     min-width: $unit-default * 10;
     border-radius: $border-radius;
 
+    p {
+      color: $color-bg;
+    }
+
     &.ERROR {
+      color: $color-bg;
       background-color: $color-waiting;
     }
 
@@ -45,8 +50,12 @@
     button {
       margin: $margin-default;
       padding: $padding-default;
-      border-radius: $border-radius * 2;
+      border-radius: $border-radius;
       background-color: $color-bg;
+
+      p {
+        color: $color-fore;
+      }
     }
 
     &-close {
